--- a/nginx/nginx-ami.json
+++ b/nginx/nginx-ami.json
@@ -1,5 +1,7 @@
   {
       "variables": {
+            "aws_access_key": "AKIAITGBH437JMUR4IZQ",
+            "aws_secret_key": "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",
             "ami": "ami-09e5afc68eed60ef4",
             "aws_region": "eu-west-2",
             "vpc": "vpc-035bfac28c2eae6cf",
@@ -8,6 +10,8 @@
       },
       "builders": [{
             "type": "amazon-ebs",
+            "access_key": "{{user `aws_access_key`}}",
+            "secret_key": "{{user `aws_secret_key`}}",
             "region": "{{ user `aws_region` }}",
             "source_ami": "{{ user `ami` }}",
             "instance_type": "t2.micro",
